agregando cursor de color amarillo al inicio del texto

--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
     --green: #00b755;
     --yellow: #daaf38;
     --red: #ca4754;
-    --black: #999;
+    --black: #222;
+    --gray: #999;
 }
 
 body {
@@ -41,4 +42,28 @@ p{
     flex-wrap: wrap;
     gap: 3px 8px;
     margin: 0;
+}
+
+x-letter{
+    color: var(--gray);
+    position: relative;
+
+    &.active::before{
+        content: '|';
+        color: var(--yellow);
+        font-size: 18px;
+        font-weight: 500;
+        position: absolute;
+        left: -65%;
+        animation: 1s blink infinite ease-in-out;
+    }
+
+}
+@keyframes blink{
+    0%, 25%{
+        opacity: 1;
+    }
+    75%{
+        opacity: 0;
+    }
 }
