--- a/style.css
+++ b/style.css
@@ -58,6 +58,14 @@ x-letter{
         animation: 1s blink infinite ease-in-out;
     }
 
+    &.correct{
+        color: white;
+    }
+
+    &.incorrect{
+        color: var(--red);
+    }
+
 }
 @keyframes blink{
     0%, 25%{
