--- a/style.css
+++ b/style.css
@@ -71,6 +71,16 @@ x-letter{
     }
 
 }
+
+x-word{
+    border-bottom: 1.5px solid transparent;
+    transition: border-color 0.3s ease-in-out;
+
+    &.marked {
+        border-color: var(--red);
+    }
+}
+
 @keyframes blink{
     0%, 25%{
         opacity: 1;
