--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ input{
     top: 0;
     left: 0;
     pointer-events: none;
+    opacity: 0;
 }
 
 p{
@@ -88,4 +89,12 @@ x-word{
     75%{
         opacity: 0;
     }
+}
+
+#game{
+    display: flex;
+}
+
+#results{
+    display:none;
 }
